flex/flex-tests/testData/flex_highlighting/RegExpInAttribute.mxml
<?xml version="1.0" encoding="utf-8"?>

<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml">
    <mx:RegExpValidator expression="/<warning descr="Empty group">(</warning><error descr="Unclosed group">/</error>g" />
</mx:Application>